--- a/src/main/resources/static/css/travel.css
+++ b/src/main/resources/static/css/travel.css
@@ -103,7 +103,8 @@ header {
     padding:24px 24px 0 24px;
     box-sizing: border-box;
 }
-.tab-list > ul > li > .info > span {
+.tab-list > ul > li > .info > span,
+.tab-list > ul > li > .info > span > span {
     font-size:12px;
     color:#717171;
 }
