--- a/src/main/resources/templates/mypage/travel.html
+++ b/src/main/resources/templates/mypage/travel.html
@@ -13,18 +13,18 @@
             <ul class="tabnav">
                 <li><a href="#tab01">예정된 예약</a></li>
                 <li><a href="#tab02">이전 예약</a></li>
-                <li><a href="#tab02">취소됨</a></li>
+                <li><a href="#tab03">취소됨</a></li>
             </ul>
             <div class="tabcontent">
                 <div id="tab01" class="tab-list">
                     <ul>
-                        <li th:each="home : ${bookedHome}" th:onclick="'location.href=\''+ @{/mypage/travel/{id}(id = ${home.getHome().id})} + '\''">
+                        <li th:each="home : ${bookedHome}" th:onclick="'location.href=\''+ @{/mypage/travel/{id}/{status}(id = ${home.getId()}, status = ${home.getStatus()})} + '\''">
                             <div class="image">
                                 <div class="img" th:each="photo : ${home.getHome().getPhoto()}" th:utext='${"<img src=" + photo.filePath + ">"}'></div>
                                 <div class="gra-box"></div>
                             </div>
                             <div class="info">
-                                <span><span th:text="${home.getCheckin()}">2021년 6월 24일</span> - <span th:text="${home.getCheckout()}">2021년 6월 25일</span></span>
+                                <span><span th:text="${home.getCheckin()}">2021년 6월 24일</span> ~ <span th:text="${home.getCheckout()}">2021년 6월 25일</span></span>
                                 <p th:text="${home.getHome().getAddress()}">경주시</p>
                             </div>
                             <div class="detail">
@@ -34,8 +34,27 @@
                         </li>
                     </ul>
                 </div>
-                <div id="tab02">tab2 content</div>
-                <div id="tab03">tab3 content</div>
+                <div id="tab02" class="tab-list">
+                    DKDK
+                </div>
+                <div id="tab03" class="tab-list">
+                    <ul>
+                        <li th:each="home : ${canceledHome}" th:onclick="'location.href=\''+ @{/mypage/travel/{id}/{status}(id = ${home.getHome().id}, status = ${home.getStatus()})} + '\''">
+                            <div class="image">
+                                <div class="img" th:each="photo : ${home.getHome().getPhoto()}" th:utext='${"<img src=" + photo.filePath + ">"}'></div>
+                                <div class="gra-box"></div>
+                            </div>
+                            <div class="info">
+                                <span><span th:text="${home.getCheckin()}">2021년 6월 24일</span> ~ <span th:text="${home.getCheckout()}">2021년 6월 25일</span></span>
+                                <p th:text="${home.getHome().getAddress()}">경주시</p>
+                            </div>
+                            <div class="detail">
+                                <div class="image" th:each="photo : ${home.getHome().getPhoto()}" th:utext='${"<img src=" + photo.filePath + ">"}'></div>
+                                <p><span th:text="${home.getHome().getName()}">시에나</span><i class="fas fa-chevron-right"></i></p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
