--- a/src/main/resources/templates/mypage/travel.html
+++ b/src/main/resources/templates/mypage/travel.html
@@ -35,7 +35,22 @@
                     </ul>
                 </div>
                 <div id="tab02" class="tab-list">
-                    DKDK
+                    <ul>
+                        <li th:each="home : ${previousHome}" th:onclick="'location.href=\''+ @{/mypage/travel/{id}/{status}(id = ${home.getHome().id}, status = ${home.getStatus()})} + '\''">
+                            <div class="image">
+                                <div class="img" th:each="photo : ${home.getHome().getPhoto()}" th:utext='${"<img src=" + photo.filePath + ">"}'></div>
+                                <div class="gra-box"></div>
+                            </div>
+                            <div class="info">
+                                <span><span th:text="${home.getCheckin()}">2021년 6월 24일</span> ~ <span th:text="${home.getCheckout()}">2021년 6월 25일</span></span>
+                                <p th:text="${home.getHome().getAddress()}">경주시</p>
+                            </div>
+                            <div class="detail">
+                                <div class="image" th:each="photo : ${home.getHome().getPhoto()}" th:utext='${"<img src=" + photo.filePath + ">"}'></div>
+                                <p><span th:text="${home.getHome().getName()}">시에나</span><i class="fas fa-chevron-right"></i></p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div id="tab03" class="tab-list">
                     <ul>
