--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="UTF-8">
-    <title>chat</title>
+    <title>Chating</title>
     <style>
         *{
             margin:0;
@@ -44,99 +44,102 @@
         }
     </style>
 </head>
+
 <script type="text/javascript">
     var ws;
 
-    function chatName() {
-        var userName = $("#userName").val();
-        if (userName == null && userName.trim() == "") {
-            // 사용자 이름이 입력되지 않았다면
-            alert("사용자 이름을 입력해주세요");
-            $("#userName").focus();
-        }else {
-            wsOpen();
-            $("#yourName").hide(); // 사용자 이름 입력란 숨기기
-            $("#yourMsg").show(); // 채팅란 보여주기
-        }
-    }
-
-    function wsOpen() { // 웹 소켓 연결
-        ws = new WebSocket("ws://" + location.host + "/chating");
+    function wsOpen(){
+        //웹소켓 전송시 현재 방의 번호를 넘겨서 보낸다.
+        ws = new WebSocket("ws://" + location.host + "/chating/"+$("#roomNumber").val());
         wsEvt();
     }
 
     function wsEvt() {
-        ws.onopen = function (data) {
-            //  웹 소켓이 열리면 초기화 세팅
+        ws.onopen = function(data){
+            //소켓이 열리면 동작
         }
 
-        ws.onmessage = function (data) {
-            // 메시지를 발송하면
-            var msg = data.data; // ??여기에는 무엇이 있을까?
-            if (msg != null && msg.trim() != "") {
+        ws.onmessage = function(data) {
+            //메시지를 받으면 동작
+            var msg = data.data;
+            if(msg != null && msg.trim() != ''){
                 var d = JSON.parse(msg);
-                if (d.type == "getId") { // ???
+                if(d.type == "getId"){
                     var si = d.sessionId != null ? d.sessionId : "";
-                    if (si != "") {
+                    if(si != ''){
                         $("#sessionId").val(si);
                     }
-                }else if (d.type == "message") {
-                    if (d.sessionId == $("#sessionId").val()) {
+                }else if(d.type == "message"){
+                    if(d.sessionId == $("#sessionId").val()){
                         $("#chating").append("<p class='me'>나 :" + d.msg + "</p>");
                     }else{
                         $("#chating").append("<p class='others'>" + d.userName + " :" + d.msg + "</p>");
                     }
-                }else {
-                    console.warn("unknown type!");
+
+                }else{
+                    console.warn("unknown type!")
                 }
             }
         }
 
-        document.addEventListener("keypress", function (e) {
-            if(e.key == 13){ // 수정필요
+        document.addEventListener("keypress", function(e){
+            if(e.keyCode == 13){ //enter press
                 send();
             }
         });
     }
 
+    function chatName(){
+        var userName = $("#userName").val();
+        if(userName == null || userName.trim() == ""){
+            alert("사용자 이름을 입력해주세요.");
+            $("#userName").focus();
+        }else{
+            wsOpen();
+            $("#yourName").hide();
+            $("#yourMsg").show();
+        }
+    }
+
     function send() {
-       var option = {
-           type: "message",
-           sessionId: $("#sessionId").val(),
-           userName: $("#userName").val(),
-           msg: $("#chatting").val()
-       }
-       ws.send(JSON.stringify(option));
-        $("#chatting").val(""); // 채팅란 초기화
+        var option ={
+            type: "message",
+            roomNumber: $("#roomNumber").val(),
+            sessionId : $("#sessionId").val(),
+            userName : $("#userName").val(),
+            msg : $("#chatting").val()
+        }
+        ws.send(JSON.stringify(option))
+        $('#chatting').val("");
     }
 </script>
 <body>
-    <div id="container" class="container">
-        <h1>채팅</h1>
-        <input type="hidden" id="sessionId" value="">
+<div id="container" class="container">
+    <h1><span th:text="${roomName}"></span>의 채팅방</h1>
+    <input type="hidden" id="sessionId" value="">
+    <input type="hidden" id="roomNumber" th:value="${roomNumber}">
 
-        <div id="chating" class="chating">
-            <!-- $("#chating").append("<p>" + msp + "</p>") 추가되는 곳 -->
-        </div>
-
-        <div id="yourName">
-            <table class="inputTable">
-                <tr>
-                    <th>사용자명</th>
-                    <th><input type="text" name="userName" id="userName"></th>
-                    <th><button onclick="chatName()" id="startBtn">이름 등록</button></th>
-                </tr>
-            </table>
-        </div>
-        <div id="yourMsg">
-            <table class="inputTable">
-                <tr>
-                    <th>메시지</th>
-                    <th><input id="chatting" placeholder="보내실 메시지를 입력하세요."></th>
-                    <th><button onclick="send()" id="sendBtn">보내기</button></th>
-                </tr>
-            </table>
-        </div>
+    <div id="chating" class="chating">
     </div>
+
+    <div id="yourName">
+        <table class="inputTable">
+            <tr>
+                <th>사용자명</th>
+                <th><input type="text" name="userName" id="userName"></th>
+                <th><button onclick="chatName()" id="startBtn">이름 등록</button></th>
+            </tr>
+        </table>
+    </div>
+    <div id="yourMsg">
+        <table class="inputTable">
+            <tr>
+                <th>메시지</th>
+                <th><input id="chatting" placeholder="보내실 메시지를 입력하세요."></th>
+                <th><button onclick="send()" id="sendBtn">보내기</button></th>
+            </tr>
+        </table>
+    </div>
+</div>
 </body>
 </html>
